removed commented out line and fixed extra space in search results

--- a/static/css/timetable/partials/search_bar.scss
+++ b/static/css/timetable/partials/search_bar.scss
@@ -173,7 +173,7 @@
 // List wrapper for each search result course
 .search-results__list-container {
   position: absolute;
-  width: 66.3%;
+  width: 67%;
   overflow-y: auto;
   height: 100%;
   min-height: 232px;
